Added configuration & changes to chat bot to publish to kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ quarkus.kafka-streams.application-id=hackfest1-dev
 quarkus.kafka-streams.topics=messages,emojis,gifs
 
 # Configure the Kafka sink (we write to it)
+# Outgoing stream
+mp.messaging.outgoing.messages.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
 mp.messaging.outgoing.messages.connector=smallrye-kafka
 mp.messaging.outgoing.messages.topic=messages
-mp.messaging.outgoing.messages.value.serializer=org.apache.kafka.common.serialization.IntegerSerializer
+mp.messaging.outgoing.messages.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.messages.key.serializer=org.apache.kafka.common.serialization.StringSerializer
