Updated props comments to make sure it matches the project setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ quarkus.kafka-streams.topics=messages,emojis,gifs
 
 # Configure the Kafka sink (we write to it)
 # Outgoing stream
+
+# match the server to the service that you've deployed in kafka - e.g. "cluster-name-kafka-bootstrap"
 mp.messaging.outgoing.messages.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
 mp.messaging.outgoing.messages.connector=smallrye-kafka
 mp.messaging.outgoing.messages.topic=messages
