Added sentiment analyzer conversion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,25 @@ quarkus.kafka-streams.topics=messages,emojis,gifs
 # Outgoing stream
 
 # match the server to the service that you've deployed in kafka - e.g. "cluster-name-kafka-bootstrap"
-mp.messaging.outgoing.messages.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
-mp.messaging.outgoing.messages.connector=smallrye-kafka
-mp.messaging.outgoing.messages.topic=messages
-mp.messaging.outgoing.messages.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.messages.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.chat-messages.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
+mp.messaging.outgoing.chat-messages.connector=smallrye-kafka
+mp.messaging.outgoing.chat-messages.topic=messages
+mp.messaging.outgoing.chat-messages.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.chat-messages.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+mp.messaging.outgoing.chat-sentiment-scores.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
+mp.messaging.outgoing.chat-sentiment-scores.connector=smallrye-kafka
+mp.messaging.outgoing.chat-sentiment-scores.topic=chat-sentiment-scores
+mp.messaging.outgoing.chat-sentiment-scores.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.chat-sentiment-scores.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+
+# Incoming stream (unneeded when using Knative events)
+mp.messaging.incoming.messages.connector=smallrye-kafka
+mp.messaging.incoming.messages.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.messages.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.messages.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
+mp.messaging.incoming.messages.id=chat-messages
+mp.messaging.incoming.messages.auto.offset.reset=earliest
+mp.messaging.incoming.messages.enable.auto.commit=true
+mp.messaging.incoming.messages.request.timeout.ms=30000
