Added rest client call to ODH sentiment analysis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,8 @@ mp.messaging.incoming.messages.id=chat-messages
 mp.messaging.incoming.messages.auto.offset.reset=earliest
 mp.messaging.incoming.messages.enable.auto.commit=true
 mp.messaging.incoming.messages.request.timeout.ms=30000
+
+
+#Configure the microprofile rest client for the sentiment analyzer
+quarkus.hackfest.client.SentimentRestClient/mp-rest/url=http://sentiment-analysis-dev.apps.cluster-5b91.5b91.example.opentlc.com
+quarkus.hackfest.client.SentimentRestClient/mp-rest/scope=javax.inject.Singleton 
