--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,11 @@ mp.messaging.outgoing.chat-messages.topic=messages
 mp.messaging.outgoing.chat-messages.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.chat-messages.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 
-mp.messaging.outgoing.chat-sentiment-scores.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
-mp.messaging.outgoing.chat-sentiment-scores.connector=smallrye-kafka
-mp.messaging.outgoing.chat-sentiment-scores.topic=chat-sentiment-scores
-mp.messaging.outgoing.chat-sentiment-scores.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.chat-sentiment-scores.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.chat-sentiment-scores-results.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
+mp.messaging.outgoing.chat-sentiment-scores-results.connector=smallrye-kafka
+mp.messaging.outgoing.chat-sentiment-scores-results.topic=chat-sentiment-scores
+mp.messaging.outgoing.chat-sentiment-scores-results.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.chat-sentiment-scores-results.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 
 # Incoming stream (unneeded when using Knative events)
@@ -32,7 +32,21 @@ mp.messaging.incoming.messages.auto.offset.reset=earliest
 mp.messaging.incoming.messages.enable.auto.commit=true
 mp.messaging.incoming.messages.request.timeout.ms=30000
 
+mp.messaging.incoming.chat-sentiment-scores.connector=smallrye-kafka
+mp.messaging.incoming.chat-sentiment-scores.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.chat-sentiment-scores.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.chat-sentiment-scores.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
+mp.messaging.incoming.chat-sentiment-scores.id=chat-sentiment-score
+mp.messaging.incoming.chat-sentiment-scores.auto.offset.reset=earliest
+mp.messaging.incoming.chat-sentiment-scores.enable.auto.commit=true
+mp.messaging.incoming.chat-sentiment-scores.request.timeout.ms=30000
+
 
 #Configure the microprofile rest client for the sentiment analyzer
 quarkus.hackfest.client.SentimentRestClient/mp-rest/url=http://sentiment-analysis-dev.apps.cluster-5b91.5b91.example.opentlc.com
 quarkus.hackfest.client.SentimentRestClient/mp-rest/scope=javax.inject.Singleton 
+
+#Configure the name of the resource from which to read the google creds
+hackfest.chatbot.googleCredsResource=/ak-quarkus-hackfest1-794ffba5101c.json
+
+
