--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 release.properties
 .mvn/wrapper/maven-wrapper.jar
+src/main/resources/ak-quarkus-hackfest1-794ffba5101c.json
