moved chatbot project into separate folder

--- a/chatbot/src/main/resources/application.properties
+++ b/chatbot/src/main/resources/application.properties
@@ -9,13 +9,13 @@ quarkus.kafka-streams.topics=messages,emojis,gifs
 # Outgoing stream
 
 # match the server to the service that you've deployed in kafka - e.g. "cluster-name-kafka-bootstrap"
-mp.messaging.outgoing.chat-messages.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
+mp.messaging.outgoing.chat-messages.bootstrap.servers=dev-cluster-kafka-bootstrap.amq-streams1.svc.cluster.local:9092
 mp.messaging.outgoing.chat-messages.connector=smallrye-kafka
 mp.messaging.outgoing.chat-messages.topic=messages
 mp.messaging.outgoing.chat-messages.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.chat-messages.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 
-mp.messaging.outgoing.chat-sentiment-scores-results.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
+mp.messaging.outgoing.chat-sentiment-scores-results.bootstrap.servers=dev-cluster-kafka-bootstrap.amq-streams1.svc.cluster.local:9092
 mp.messaging.outgoing.chat-sentiment-scores-results.connector=smallrye-kafka
 mp.messaging.outgoing.chat-sentiment-scores-results.topic=chat-sentiment-scores
 mp.messaging.outgoing.chat-sentiment-scores-results.value.serializer=org.apache.kafka.common.serialization.StringSerializer
@@ -26,7 +26,7 @@ mp.messaging.outgoing.chat-sentiment-scores-results.key.serializer=org.apache.ka
 mp.messaging.incoming.messages.connector=smallrye-kafka
 mp.messaging.incoming.messages.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.messages.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-mp.messaging.incoming.messages.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
+mp.messaging.incoming.messages.bootstrap.servers=dev-cluster-kafka-bootstrap.amq-streams1.svc.cluster.local:9092
 mp.messaging.incoming.messages.id=chat-messages
 mp.messaging.incoming.messages.auto.offset.reset=earliest
 mp.messaging.incoming.messages.enable.auto.commit=true
@@ -35,7 +35,7 @@ mp.messaging.incoming.messages.request.timeout.ms=30000
 mp.messaging.incoming.chat-sentiment-scores.connector=smallrye-kafka
 mp.messaging.incoming.chat-sentiment-scores.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.chat-sentiment-scores.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-mp.messaging.incoming.chat-sentiment-scores.bootstrap.servers=dev-cluster-kafka-bootstrap:9092
+mp.messaging.incoming.chat-sentiment-scores.bootstrap.servers=dev-cluster-kafka-bootstrap.amq-streams1.svc.cluster.local:9092
 mp.messaging.incoming.chat-sentiment-scores.id=chat-sentiment-score
 mp.messaging.incoming.chat-sentiment-scores.auto.offset.reset=earliest
 mp.messaging.incoming.chat-sentiment-scores.enable.auto.commit=true
@@ -43,7 +43,7 @@ mp.messaging.incoming.chat-sentiment-scores.request.timeout.ms=30000
 
 
 #Configure the microprofile rest client for the sentiment analyzer
-quarkus.hackfest.client.SentimentRestClient/mp-rest/url=http://sentiment-analysis-dev.apps.cluster-5b91.5b91.example.opentlc.com
+quarkus.hackfest.client.SentimentRestClient/mp-rest/url=http://sentiment-analysis-opendatahub1.apps.cluster-nisky-a9fb.nisky-a9fb.example.opentlc.com
 quarkus.hackfest.client.SentimentRestClient/mp-rest/scope=javax.inject.Singleton 
 
 #Configure the name of the resource from which to read the google creds
