Refactored processor bot to be a knative service

--- a/chatbot/src/main/resources/application.properties
+++ b/chatbot/src/main/resources/application.properties
@@ -15,19 +15,14 @@ mp.messaging.outgoing.chat-messages.topic=messages
 mp.messaging.outgoing.chat-messages.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.chat-messages.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 
-
-
-
-
 mp.messaging.incoming.chat-sentiment-scores.connector=smallrye-kafka
 mp.messaging.incoming.chat-sentiment-scores.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.chat-sentiment-scores.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.chat-sentiment-scores.bootstrap.servers=dev-cluster-kafka-bootstrap.amq-streams1.svc.cluster.local:9092
-mp.messaging.incoming.chat-sentiment-scores.id=chat-sentiment-score
+mp.messaging.incoming.chat-sentiment-scores.id=chat-sentiment-scores
 mp.messaging.incoming.chat-sentiment-scores.auto.offset.reset=earliest
 mp.messaging.incoming.chat-sentiment-scores.enable.auto.commit=true
 mp.messaging.incoming.chat-sentiment-scores.request.timeout.ms=30000
-
 
 
 #Configure the name of the resource from which to read the google creds
