Changed mp client config - avoid quarkus mpconfig bug

--- a/sentiment-processor/src/main/resources/application.properties
+++ b/sentiment-processor/src/main/resources/application.properties
@@ -19,5 +19,5 @@ mp.messaging.outgoing.chat-sentiment-scores-results.key.serializer=org.apache.ka
 # mp.messaging.incoming.messages.request.timeout.ms=30000
 
 #Configure the microprofile rest client for the sentiment analyzer
-quarkus.hackfest.sentiment.SentimentRestClient/mp-rest/url=http://sentiment-analysis-opendatahub1.apps.cluster-nisky-a9fb.nisky-a9fb.example.opentlc.com
-#quarkus.hackfest.sentiment.SentimentRestClient/mp-rest/scope=javax.inject.Singleton 
+sentiment-rest-client/mp-rest/url=http://sentiment-analysis-opendatahub1.apps.cluster-nisky-a9fb.nisky-a9fb.example.opentlc.com
+sentiment-rest-client/mp-rest/scope=javax.inject.Singleton 
